--- a/domino-ui-demo/css/domino-ui.css
+++ b/domino-ui-demo/css/domino-ui.css
@@ -15,5 +15,11 @@
 @import url(cards/card.css);
 @import url(carousel/carousel.css);
 @import url(chips/chips.css);
+@import url(collapsible/collapsible.css);
+@import url(datatable/datatable.css);
+@import url(dialogs/dialogs.css);
+@import url(modals/modals.css);
+@import url(datepicker/datepicker.css);
+@import url(timepicker/timepicker.css);
 @import url(style.css);
 @import url(colors.css);
