--- a/domino-ui-demo/css/style.css
+++ b/domino-ui-demo/css/style.css
@@ -1,8 +1,4 @@
 ﻿﻿﻿ /* Navbar ====================================== */
-body.modal-open {
-    overflow: hidden;
-}
-
 .navbar {
     font-family: "Roboto", sans-serif;
     -webkit-border-radius: 0;
@@ -3215,6 +3211,10 @@ input[type=range] + .thumb.active .value {
     margin: 0 14px;
 }
 
+.switch[readonly] .lever {
+    display: none;
+}
+
 .form-group {
     width: 100%;
     margin-bottom: 25px;
@@ -3231,6 +3231,10 @@ input[type=range] + .thumb.active .value {
     border-radius: 0;
     padding-left: 0;
     border-bottom: 1px solid #ddd;
+}
+
+.form-group .form-control:HOVER {
+    border-color: #adaeaa;
 }
 
 .form-group label.error {
@@ -3584,189 +3588,7 @@ fieldset[disabled] .form-control {
     font-size: 17px;
 }
 
-/* Modals ====================================== */
-@media only screen and (min-width: 992px) {
-    .modal {
-        margin-left: 30%;
-        margin-right: 30%;
-        margin-top: 30px;
-        width: 40%;
-    }
 
-    .modal:not([class*="-sheet"]) {
-        top: 30px;
-    }
-
-    .modal.modal-lg {
-        margin-left: 20%;
-        margin-right: 20%;
-        margin-top: 30px;
-        width: 60%;
-    }
-
-    .modal.modal-sm {
-        margin-left: 40%;
-        margin-right: 40%;
-        margin-top: 30px;
-        width: 20%;
-    }
-
-    .modal.bottom-sheet {
-        margin: 0px;
-        bottom: 0;
-        width: 100%;
-    }
-
-    .modal.top-sheet {
-        margin: 0px;
-        top: 0;
-        width: 100%;
-    }
-
-    .modal.left-sheet {
-        margin: 0px;
-        left: 0;
-        width: 30%;
-    }
-
-    .modal.modal-lg.left-sheet {
-        width: 50%;
-    }
-
-    .modal.modal-sm.left-sheet {
-        width: 20%;
-    }
-
-    .modal.left-sheet .modal-content {
-        height: calc(100vh);
-    }
-
-    .modal.right-sheet {
-        margin: 0px;
-        right: 0;
-        width: 30%;
-    }
-
-    .modal.modal-lg.right-sheet {
-        width: 50%;
-    }
-
-    .modal.modal-sm.right-sheet {
-        width: 20%;
-    }
-
-    .modal.right-sheet .modal-content {
-        height: calc(100vh);
-    }
-}
-
-@media only screen and (max-width: 992px) {
-
-    .modal {
-        margin-left: 5%;
-        margin-right: 5%;
-        margin-top: 30px;
-        width: 90%;
-    }
-
-    .modal:not([class*="-sheet"]) {
-        top: 30px;
-    }
-
-    .modal.modal-lg {
-        margin-left: 5%;
-        margin-right: 5%;
-        margin-top: 30px;
-        width: 90%;
-    }
-
-    .modal.modal-sm {
-        margin-left: 5%;
-        margin-right: 5%;
-        margin-top: 30px;
-        width: 90%;
-    }
-
-    .modal.bottom-sheet {
-        margin: 0px;
-        bottom: 0;
-    }
-
-    .modal.top-sheet {
-        margin: 0px;
-        top: 0;
-        width: 100%;
-    }
-
-    .modal.left-sheet {
-        margin: 0px;
-        left: 0;
-        width: 90%;
-    }
-
-    .modal.modal-lg.left-sheet {
-        width: 90%;
-    }
-
-    .modal.modal-sm.left-sheet {
-        width: 90%;
-    }
-
-    .modal.left-sheet .modal-content {
-        height: calc(100vh);
-    }
-
-    .modal.right-sheet {
-        margin: 0px;
-        right: 0;
-        width: 90%;
-    }
-
-    .modal.modal-lg.right-sheet {
-        width: 90%;
-    }
-
-    .modal.modal-sm.right-sheet {
-        width: 90%;
-    }
-
-    .modal.right-sheet .modal-content {
-        height: calc(100vh);
-    }
-
-    .modal.picker-modal {
-        margin-top: 0px;
-        top: 5px;
-    }
-}
-
-.modal .modal-header {
-    border: none;
-    padding: 25px 25px 25px 25px;
-}
-
-.modal .modal-header .modal-title {
-    font-weight: bold;
-    font-size: 16px;
-}
-
-.modal .modal-content {
-    -webkit-border-radius: 0;
-    -moz-border-radius: 0;
-    -ms-border-radius: 0;
-    border-radius: 0;
-    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.31) !important;
-    border: none;
-}
-
-.modal .modal-content .modal-body {
-    color: #777;
-    padding: 15px 25px 15px 25px;
-}
-
-.modal .modal-footer {
-    border: none;
-}
 
 /* Labels ====================================== */
 .label {
@@ -3808,149 +3630,11 @@ fieldset[disabled] .form-control {
 }
 
 /* Tables ====================================== */
-.table tbody tr td, .table tbody tr th {
-    padding: 10px;
-    border-top: 1px solid #eee;
-    border-bottom: 1px solid #eee;
-}
 
-.table tbody tr.primary td, .table tbody tr.primary th {
-    background-color: #1f91f3;
-    color: #fff;
-}
-
-.table tbody tr.success td, .table tbody tr.success th {
-    background-color: #2b982b;
-    color: #fff;
-}
-
-.table tbody tr.info td, .table tbody tr.info th {
-    background-color: #00b0e4;
-    color: #fff;
-}
-
-.table tbody tr.warning td, .table tbody tr.warning th {
-    background-color: #ff9600;
-    color: #fff;
-}
-
-.table tbody tr.danger td, .table tbody tr.danger th {
-    background-color: #fb483a;
-    color: #fff;
-}
-
-.table thead tr th {
-    padding: 10px;
-    border-bottom: 1px solid #eee;
-}
-
-.table-bordered {
-    border-top: 1px solid #eee;
-}
-
-.table-bordered tbody tr td, .table-bordered tbody tr th {
-    padding: 10px;
-    border: 1px solid #eee;
-}
-
-.table-bordered thead tr th {
-    padding: 10px;
-    border: 1px solid #eee;
-}
 
 /* Panel ======================================= */
 
-.panel-group .panel {
-    -webkit-border-radius: 0;
-    -moz-border-radius: 0;
-    -ms-border-radius: 0;
-    border-radius: 0;
-    -webkit-box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12);
-    box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12);
-}
 
-.panel-group .panel .panel-title .material-icons {
-    float: left;
-    line-height: 16px;
-    margin-right: 8px;
-}
-
-.panel-group .panel .panel-heading {
-    padding: 0;
-    -webkit-border-radius: 0;
-    -moz-border-radius: 0;
-    -ms-border-radius: 0;
-    border-radius: 0;
-}
-
-.panel-group .panel .panel-heading a {
-    display: block;
-    padding: 10px 15px;
-}
-
-.panel-group .panel .panel-heading a:hover, .panel-group .panel .panel-heading a:focus, .panel-group .panel .panel-heading a:active {
-    text-decoration: none;
-}
-
-.panel-group .panel .panel-body {
-    color: #555;
-}
-
-.panel-group .panel-primary {
-    border: 1px solid #1f91f3;
-}
-
-.panel-group .panel-primary .panel-title {
-    background-color: #1f91f3;
-    color: #fff;
-}
-
-.panel-group.full-body .panel-primary .panel-body {
-    background-color: #1f91f3;
-    color: #fff;
-}
-
-.panel-group .panel-success {
-    border: 1px solid #2b982b;
-}
-
-.panel-group .panel-success .panel-title {
-    background-color: #2b982b;
-    color: #fff;
-}
-
-.panel-group.full-body .panel-success .panel-body {
-    background-color: #2b982b;
-    color: #fff;
-}
-
-.panel-group .panel-warning {
-    border: 1px solid #ff9600;
-}
-
-.panel-group .panel-warning .panel-title {
-    background-color: #ff9600;
-    color: #fff;
-}
-
-.panel-group.full-body .panel-warning .panel-body {
-    background-color: #ff9600;
-    color: #fff;
-}
-
-.panel-group .panel-danger {
-    border: 1px solid #fb483a;
-}
-
-.panel-group .panel-danger .panel-title {
-    background-color: #fb483a;
-    color: #fff;
-}
-
-.panel-group.full-body .panel-danger .panel-body {
-    background-color: #fb483a;
-    color: #fff;
-}
 
 /* Progress Bars =============================== */
 .progress {
@@ -5876,6 +5560,7 @@ a.list-group-item:not([class*="bg-"]):not([class*="-success"]):not([class*="-dan
 
 .menu .tree-leaf a .title {
     font-weight: 500;
+    display: block;
 }
 
 .menu .list .ml-tree {
@@ -6291,105 +5976,7 @@ a.list-group-item:not([class*="bg-"]):not([class*="-success"]):not([class*="-dan
 }
 
 /* Jquery DataTable ============================ */
-.dataTables_wrapper {
-    position: relative;
-}
 
-.dataTables_wrapper select {
-    border: none;
-    border-bottom: 1px solid #ddd;
-    -webkit-border-radius: 0;
-    -moz-border-radius: 0;
-    -ms-border-radius: 0;
-    border-radius: 0;
-    -webkit-box-shadow: none;
-    -moz-box-shadow: none;
-    -ms-box-shadow: none;
-    box-shadow: none;
-}
-
-.dataTables_wrapper select:active, .dataTables_wrapper select:focus {
-    -webkit-box-shadow: none;
-    -moz-box-shadow: none;
-    -ms-box-shadow: none;
-    box-shadow: none;
-}
-
-.dataTables_wrapper input[type="search"] {
-    -webkit-border-radius: 0;
-    -moz-border-radius: 0;
-    -ms-border-radius: 0;
-    border-radius: 0;
-    -webkit-box-shadow: none;
-    -moz-box-shadow: none;
-    -ms-box-shadow: none;
-    box-shadow: none;
-    border: none;
-    font-size: 12px;
-    border-bottom: 1px solid #ddd;
-}
-
-.dataTables_wrapper input[type="search"]:focus, .dataTables_wrapper input[type="search"]:active {
-    border-bottom: 2px solid #1f91f3;
-}
-
-.dataTables_wrapper .dt-buttons {
-    float: left;
-}
-
-.dataTables_wrapper .dt-buttons a.dt-button {
-    background-color: #607D8B;
-    color: #fff;
-    padding: 7px 12px;
-    margin-right: 5px;
-    text-decoration: none;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.16), 0 2px 10px rgba(0, 0, 0, 0.12);
-    -webkit-border-radius: 2px;
-    -moz-border-radius: 2px;
-    -ms-border-radius: 2px;
-    border-radius: 2px;
-    border: none;
-    font-size: 13px;
-    outline: none;
-}
-
-.dataTables_wrapper .dt-buttons a.dt-button:active {
-    opacity: 0.8;
-}
-
-.dt-button-info {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    min-width: 400px;
-    text-align: center;
-    background-color: #fff;
-    border: 2px solid #999;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    -ms-border-radius: 3px;
-    border-radius: 3px;
-    margin-top: -100px;
-    margin-left: -200px;
-    z-index: 21;
-}
-
-.dt-button-info h2 {
-    color: #777;
-}
-
-.dt-button-info div {
-    color: #777;
-    margin-bottom: 20px;
-}
-
-.table-striped > tbody > tr:nth-of-type(odd):not([class*="details-tr"]):not([class*="bg-"]) {
-    background-color: #f9f9f9;
-}
-
-.table-hover > tbody > tr:hover:not([class*="details-tr"]):not([class*="bg-"]) {
-    background-color: #f5f5f5;
-}
 
 /* Light Gallery ================================ */
 .lg-outer .lg-thumb-item,
@@ -6438,159 +6025,7 @@ a.disabled {
     margin-bottom: 0px !important;
 }
 
-.calendar {
-    width: 100%;
-    display: inline-block;
-    -webkit-box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12);
-    box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12);
-}
 
-.calendar .date-panel {
-    text-align: center;
-    margin-bottom: 10px;
-}
-
-.calendar .day-name {
-    text-transform: capitalize;
-    height: 3.2rem;
-    line-height: 3.2rem;
-    font-size: 15px;
-    opacity: 1;
-    color: rgba(255, 255, 255, 0.8);
-}
-
-.calendar .month-name {
-    text-transform: uppercase;
-    font-size: 24px;
-}
-
-.calendar .dropdown-menu {
-    text-transform: capitalize;
-}
-
-.calendar .dropdown-toggle {
-    text-transform: capitalize;
-}
-
-.calendar .date-picker th {
-    text-transform: capitalize;
-}
-
-.calendar .day-number {
-    font-size: 48px;
-}
-
-.calendar .year-number {
-    font-size: 24px;
-    color: rgba(255, 255, 255, 0.8);
-}
-
-.date-picker-container {
-    padding-left: 10px;
-    padding-right: 10px;
-}
-
-.calendar .selector-container {
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-top: 10px;
-}
-
-.calendar .dropdown-toggle {
-    padding-right: 5px !important;
-}
-
-.picker-modal-header {
-    padding: 5px !important;
-    text-align: center !important;
-}
-
-.calendar .navigate {
-    border-radius: 50%;
-    transform: scale(0.9);
-    text-align: center;
-    color: #7d7d7d;
-    font-weight: 600;
-    width: 30px;
-    height: 30px;
-    line-height: 42px
-}
-
-.date-picker {
-    width: 100%;
-}
-
-.date-picker thead {
-    border-bottom: 1px solid #E3E3E3;
-}
-
-.date-picker th {
-    cursor: pointer;
-    text-align: center;
-    padding: .75rem 0;
-}
-
-.date-picker .current-month {
-    text-align: center;
-    cursor: pointer;
-    color: #7d7d7d;
-    font-weight: 600;
-    width: 35px;
-    height: 35px;
-    line-height: 35px;
-}
-
-.date-picker .current-month:hover {
-    color: #000000;
-}
-
-.date-picker .other-month {
-    text-align: center;
-    cursor: pointer;
-    color: #999999;
-    width: 35px;
-    height: 35px;
-    line-height: 35px;
-}
-
-.date-picker .selected {
-    border-radius: 50%;
-    transform: scale(0.9);
-    line-height: 35px;
-    color: #ffffff;
-}
-
-.date-picker .selected:HOVER {
-    color: #ffffff !important;
-}
-
-.date-picker .year-select {
-    padding-right: 0px !important;
-}
-
-.date-picker .month-select {
-    padding-left: 0px !important;
-}
-
-.calendar .cal-footer {
-    padding: 5px;
-    text-align: center;
-}
-
-.calendar .cal-footer .btn {
-    text-transform: uppercase;
-    text-overflow: ellipsis;
-    max-width: 85px;
-    padding: 2px;
-}
-
-.calendar .clear-button {
-    float: left;
-}
-
-.calendar .close-button {
-    float: right;
-}
 
 @media only screen and (max-width: 600px) {
     .center-on-small-only {
@@ -6650,9 +6085,8 @@ a.disabled {
 }
 
 .horizontal-radio {
-    display: inline-block;
-    width: auto;
     margin: 5px;
+    width: auto;
 }
 
 .input-addon-container {
@@ -6754,164 +6188,6 @@ a.disabled {
 .clock-picker .small-hour:hover {
 }
 
-.time-picker {
-    width: 100%;
-    display: inline-block;
-    -webkit-box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12);
-    box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12);
-}
-
-.time-picker .picker-content {
-    height: 255px;
-}
-
-.time-picker .time-panel {
-    text-align: center;
-    padding-top: 10px;
-    height: 80px;
-}
-
-.time-picker .time-display-large {
-    font-size: 42px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    transition-duration: 600ms;
-    align-items: flex-end;
-}
-
-.time-picker .hour-text {
-    font-size: 42px;
-    line-height: 60px;
-    cursor: pointer;
-}
-
-.time-picker .minute-text {
-    font-size: 42px;
-    line-height: 60px;
-    cursor: pointer;
-}
-
-.time-picker .am-pm-container {
-    cursor: pointer;
-    padding-left: 5px;
-    text-transform: uppercase;
-}
-
-.time-picker .am-pm-text {
-}
-
-.time-picker .am-pm-top {
-    line-height: 10px;
-    float: left;
-    clear: left;
-    font-size: 12px;
-    width: 40px;
-    color: #d2d2d2;
-    text-align: left;
-}
-
-.time-picker .am-pm-bottom {
-    float: left;
-    clear: left;
-    padding-bottom: 10px;
-    width: 40px;
-    text-align: left;
-    font-size: 18px;
-}
-
-.time-picker .navigate {
-    border-radius: 50%;
-    transform: scale(0.9);
-    text-align: center;
-    font-weight: 600;
-    position: relative;
-    color: white !important;
-}
-
-.time-picker .navigate-left {
-    left: -30px;
-}
-
-.time-picker .navigate-right {
-    right: -30px;
-}
-
-.time-picker .full-time {
-    text-align: center;
-}
-
-.time-picker-container {
-
-}
-
-.time-picker .left-button {
-    position: relative;
-    left: -57px;
-    padding-left: 0px;
-    padding-right: 0px;
-    z-index: 1;
-    line-height: 40px;
-}
-
-.time-picker .right-button {
-    position: relative;
-    right: -137px;
-    padding-left: 0px;
-    padding-right: 0px;
-    z-index: 1;
-    line-height: 40px;
-}
-
-.time-picker .left-sm-button {
-    top: -2px;
-    position: relative;
-    left: -154px;
-    padding-left: 0px;
-    padding-right: 0px;
-    z-index: 1;
-    line-height: 30px;
-}
-
-.time-picker .right-sm-button {
-    top: -2px;
-    position: relative;
-    right: -54px;
-    padding-left: 0px;
-    padding-right: 0px;
-    z-index: 1;
-    line-height: 30px;
-}
-
-.time-text {
-    height: 40px;;
-    width: 200px;
-    position: absolute;
-    left: 50%;
-    margin-left: -100px;
-    margin-top: 10px;
-}
-
-.time-picker .time-footer {
-    padding: 5px;
-    text-align: center;
-}
-
-.time-picker .time-footer .btn {
-    text-transform: uppercase;
-    text-overflow: ellipsis;
-    max-width: 85px;
-    padding: 2px;
-}
-
-.time-picker .clear-button {
-    float: left;
-}
-
-.time-picker .close-button {
-    float: right;
-}
-
 .cursor-pointer {
     cursor: pointer;
 }
@@ -6922,92 +6198,6 @@ a.disabled {
     -khtml-user-select: none; /* KHTML browsers (e.g. Konqueror) */
     -webkit-user-select: none; /* Chrome, Safari, and Opera */
     -webkit-touch-callout: none; /* Disable Android and iOS callouts*/
-}
-
-.table-cm-header:HOVER {
-    background-color: rgba(0, 0, 0, 0.04) !important;
-}
-
-.table thead tr th.table-cm-filter {
-    padding: 5px;
-    font-weight: 300;
-}
-
-.table-search-box {
-    background-color: #efefef;
-    border-radius: 3px;
-}
-
-.table-search-box .form-line .form-control {
-    background-color: #efefef;
-    border-bottom: 0px;
-    box-shadow: none;
-}
-
-.details-td {
-    max-width: 200px;
-}
-
-.details-tr {
-    border-top: 1px double #c3c3c3;
-}
-
-.table td .form-group {
-    margin-bottom: 0px;
-}
-
-.table {
-    border-bottom: 1px solid #eee;
-    margin-bottom: 0px !important;
-}
-
-.table .marker {
-    padding: 0px !important;
-    width: 3px !important;
-}
-
-.table .table-checkbox:before {
-    margin-top: 4px !important;
-}
-
-.tbody-fixed {
-    display: block;
-    overflow: auto;
-    /*border-bottom: 1px solid #eee;*/
-}
-
-.details-td {
-    max-width: 200px;
-}
-
-.table .marker {
-    padding: 0px !important;
-    width: 3px !important;
-}
-
-.table .table-checkbox:before {
-    margin-top: 4px !important;
-}
-
-.table .select-checkbox {
-    margin: 0px;
-    height: 20px;
-}
-
-.table .select-checkbox .checkbox {
-    margin: 0px;
-    height: 20px;
-}
-
-.table .select-checkbox .form-control {
-    height: 20px;
-    padding: 0px;
-    background: transparent;
-}
-
-.table .select-checkbox .form-control label {
-    height: 20px;
-    margin-bottom: 0px;
 }
 
 .material-icons {
@@ -7021,15 +6211,6 @@ a.disabled {
     padding-right: 25px;
 }
 
-.modal-content[class*="col-"] .modal-footer {
-    background-color: rgba(0, 0, 0, 0.12);
-}
-
-.modal-content[class*="col-"] .modal-footer .btn-link:hover,
-.modal-content[class*="col-"] .modal-footer .btn-link:active,
-.modal-content[class*="col-"] .modal-footer .btn-link:focus {
-    background-color: rgba(0, 0, 0, 0.12);
-}
 
 .panel-group .full-body .panel[class*="col-"] .panel-body {
     border-top-color: #fff;
@@ -7583,6 +6764,7 @@ input[type=tel].disabled-suggestions::-webkit-calendar-picker-indicator {
     border: 0px;
     text-align: left;
     padding: 0;
+    cursor: pointer;
 }
 
 .select-button[disabled] {
